<resources>
    <string name="app_name">Fragaria</string>
    <string name="title_welcomePage">Apa itu Fragaria?</string>
    <string name="introduction_welcomePage">Aplikasi ini dirancang untuk memudahkan petani mengidentifikasi penyakit stroberi. Kami ingin membantu petani Indonesia dalam berkebun dan merawat kebun strawberry mereka untuk menghasilkan kualitas strawberry yang lebih baik.</string>
    <string name="text_buttonWelcome">Mulai</string>
    <string name="text_buttonScan">Pindai Penyakit</string>
    <string name="text_buttonArticle">Baca Artikel</string>
    <string name="text_buttonGuide">Butuh Panduan</string>
    <string name="text_buttonCamera">Kamera</string>
    <string name="text_buttonGallery">Galeri</string>
    <string name="text_buttonUpload">Unggah</string>
    <string name="text_detectionResult">Hasil Deteksi:</string>
    <string name="text_disease">Ulat</string>
    <string name="text_percentResult">98</string>
    <string name="text_percent">%</string>
    <string name="text_titleCountermeasures">Cara Penanggulangan:</string>
    <string name="text_counterMeasures"><pre>1. Lorem ipsum dolor sit amet.\n2.  Consectetur adipiscing elit.\n3.  Aliquam vitae risus id ex pellentesque finibus.\n4.  Nulla facilisi. Nunc quis ultrices nulla.\n5.  Duis sodales nunc et odio pellentesque, non pulvinar est sollicitudin.\n6.  Quisque at felis in leo dapibus cursus sed non tellus.\n7.  Aliquam id porta massa, quis tempor tortor.\n8.  Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n9.  Integer magna mi, facilisis non odio non.</pre>
    </string>
    <string name="text_buttonResultToHomePage">Halaman Utama</string>
    <string name="text_buttonResultToArticle">Artikel</string>
    <string name="text_titleArticleUlat">Ulat</string>
    <string name="text_titleArticleEmbunTepung">Embun Tepung</string>
    <string name="text_titleArticleMite">Mite</string>
    <string name="text_titleDetailUlat">Ulat</string>
    <string name="text_titleDetailMite">Mite</string>
    <string name="text_titleDetailEmbungTepung">Embun Tepung</string>
    <string name="text_detailMite">Penyakit mite pada daun tanaman stroberi disebabkan oleh serangan tungau (mite) pada daun tanaman stroberi. Mite dapat merusak tanaman stroberi dengan cara menyerap nutrisi pada daun tanaman, sehingga daun menjadi kering, keriput, dan berwarna kekuningan.\n\nSerangan mite pada tanaman stroberi biasanya terjadi pada musim panas dan dapat menyebar dengan cepat di antara tanaman stroberi yang tumbuh berdekatan. Mite pada tanaman stroberi juga dapat menyebar melalui alat-alat yang digunakan untuk perawatan tanaman dan angin.\n\nCara penanggulangan yang dapat dilakukan untuk mengatasi serangan mite pada daun tanaman stroberi antara lain:\n\n1. Praktikkan sanitasi: Membersihkan daun-daun yang jatuh atau rusak, serta membuang tanaman yang terinfeksi dapat membantu mengurangi risiko infeksi pada tanaman stroberi yang sehat.\n\n2. Gunakan insektisida: Penggunaan insektisida yang sesuai dapat membantu mengendalikan populasi mite pada daun stroberi. Pastikan Anda memilih insektisida yang aman untuk tanaman dan manusia serta sesuai dengan jenis mite yang menyerang stroberi.\n\n3. Gunakan predator alami: Beberapa jenis predator alami seperti spesies tawon atau kepik dapat membantu mengendalikan populasi mite. Anda dapat membeli predator alami ini dan melepaskannya di sekitar tanaman stroberi.\n\n4. Pemeriksaan rutin: Inspeksi tanaman stroberi secara teratur dapat membantu mendeteksi adanya mite pada daun stroberi. Jika ditemukan mite, segera singkirkan dengan memotong bagian daun yang terinfeksi atau membunuh mite dengan tangan.\n\n5. Penggunaan minyak hortikultura: Penggunaan minyak hortikultura dapat membantu mengendalikan populasi mite pada daun stroberi. Minyak hortikultura dapat dicampur dengan air dan disemprotkan pada daun-daun yang terinfeksi.\n\n6. Penggunaan sabun insektisida: Penggunaan sabun insektisida dapat membantu mengendalikan populasi mite pada daun stroberi. Sabun insektisida dapat dicampur dengan air dan disemprotkan pada daun-daun yang terinfeksi.</string>
    <string name="text_detailUlat">Penyakit ulat pada daun tanaman stroberi sebenarnya bukanlah penyakit, melainkan serangan hama dari ulat (larva) beberapa jenis ngengat, seperti ulat Gray dan ulat Tanah. Serangan ulat pada daun tanaman stroberi dapat menyebabkan kerusakan pada daun dan buah stroberi, sehingga berdampak pada produktivitas tanaman.\n\nUlat pada daun stroberi biasanya muncul pada musim semi dan gugur, saat udara menjadi lebih lembab dan kondisi lingkungan menjadi lebih sejuk. Ulat memakan daun stroberi dan meninggalkan bekas lubang pada daun, sehingga daun menjadi rusak dan tanaman menjadi tidak sehat. Selain itu, ulat juga dapat memakan buah stroberi dan merusak kualitas buah.\n\nCara penanggulangan yang dapat dilakukan untuk mengatasi serangan ulat pada daun tanaman stroberi antara lain:\n\n1. Praktikkan sanitasi: Membersihkan daun-daun yang jatuh atau rusak, serta membuang tanaman yang terinfeksi dapat membantu mengurangi risiko infeksi pada tanaman stroberi yang sehat.\n\n2. Gunakan insektisida: Jika serangan ulat terjadi secara terus-menerus dan mengancam produksi stroberi, penggunaan insektisida dapat menjadi pilihan terakhir. Pastikan Anda memilih insektisida yang aman untuk tanaman dan manusia serta sesuai dengan jenis ulat yang menyerang stroberi.\n\n3. Pemeriksaan rutin: Inspeksi tanaman stroberi secara teratur dapat membantu mendeteksi adanya ulat atau telurnya. Jika ditemukan ulat atau telurnya, segera singkirkan dengan memotong bagian daun yang terinfeksi atau membunuh ulat dengan tangan.\n\n4. Penggunaan predator alami: Beberapa jenis predator alami seperti kepik hijau, kepik biru, atau spesies serangga lainnya dapat membantu mengendalikan populasi ulat. Anda dapat membeli predator alami ini dan melepaskannya di sekitar tanaman stroberi.\n\n5. Gunakan kain jaring: Membungkus tanaman stroberi dengan kain jaring dapat membantu menghindari serangan ulat. Kain jaring juga dapat digunakan sebagai pengganti insektisida jika Anda ingin menghindari penggunaan bahan kimia.</string>
    <string name="text_detailEmbunTepung"><pre>Embun tepung adalah penyakit jamur pada daun tanaman stroberi yang disebabkan oleh jamur Uncinula necator. Jamur ini menyebar melalui spora yang dihasilkan oleh bagian tubuh jamur, seperti miselium dan konidiofor. Spora jamur terbawa oleh angin atau binatang hingga menempel pada daun stroberi dan kemudian menyebar pada daun-daun yang lain.\n\nCiri-ciri embun tepung pada daun stroberi biasanya berupa lapisan putih berbentuk seperti serbuk tepung yang menutupi permukaan daun dan buah stroberi. Gejala ini dapat menyebar secara cepat dan merusak daun tanaman stroberi. Jika penyakit embun tepung tidak segera ditangani, produksi buah stroberi dapat menurun.\n\nEmbun tepung pada daun stroberi biasanya muncul saat kondisi lingkungan lembab dan berangin. Penyakit ini juga dapat terjadi pada suhu yang dingin, khususnya pada musim semi dan gugur. Tanaman stroberi yang terlalu dekat satu sama lain juga dapat meningkatkan risiko terjadinya penyakit embun tepung.\n\nCara penanggulangan yang dapat dilakukan untuk mengatasi penyakit embun tepung pada daun stroberi antara lain:\n\n1. Praktikkan sanitasi: Membersihkan daun-daun yang jatuh atau rusak, serta membuang tanaman yang terinfeksi dapat membantu mengurangi risiko infeksi pada tanaman stroberi yang sehat.\n\n2. Sistem irigasi yang baik: Pastikan tanaman tidak terlalu basah karena kelembaban yang berlebihan dapat memicu pertumbuhan jamur penyebab embun tepung. Gunakan irigasi tetesan atau pengairan dasar tanah untuk menghindari daun dan buah terkena air secara langsung.\n\n3. Gunakan fungisida: Jika penyakit telah menyebar, Anda dapat menggunakan fungisida yang tersedia di pasaran. Pilihlah fungisida yang sesuai dengan jenis jamur penyebab embun tepung pada daun stroberi.\n\n4. Penjarangan tanaman: Menjarangkan tanaman stroberi secara teratur dapat membantu udara bergerak lebih lancar dan mengurangi kelembaban di antara daun-daun tanaman stroberi.\n\n5. Gunakan varietas tahan penyakit: Ada beberapa varietas stroberi yang lebih tahan terhadap infeksi embun tepung, jadi pastikan untuk memilih varietas yang cocok untuk lingkungan tumbuh Anda.\n\n6. Penggunaan ramuan alami: Ada beberapa ramuan alami seperti larutan baking soda dan minyak kayu putih yang dapat membantu mengurangi pertumbuhan jamur penyebab embun tepung pada daun stroberi. Namun, pastikan untuk melakukan uji coba terlebih dahulu pada daun stroberi yang sedikit terinfeksi sebelum menggunakan ramuan alami pada tanaman yang lebih besar.</pre></string>
    <string name="text_titleGuide">PANDUAN PENGGUNAAN</string>
    <string name="text_guide1">1.Click “MULAI” untuk masuk ke halaman utama.</string>
    <string name="text_guide2">2.Pilih “Scan” untuk mendeteksi penyakit daun tanaman stroberi.</string>
    <string name="text_guide3">3.Pilih “Kamera” untuk mengambil foto daun secara langsung / pilih “Galeri” untuk mengambil foto dari galeri hp.</string>
    <string name="text_guide4">4.Klik “Unggah” untuk mendapatkan hasil deteksi penyakit daun tanaman stroberi.</string>
    <string name="text_guide5">5.Pilih “HALAMAN UTAMA” untuk kembali ke halaman utama / pilih “ARTIKEL” untuk masuk ke halaman artikel.</string>
    <string name="image_error">Error</string>
    <string name="text_welcome">Selamat Datang,</string>
    <string name="text_welcome2">Apa yang kamu butuhkan?</string>
    <string name="counterMeasureSehat"><pre>Untuk menjaga daun stroberi tetap sehat, berikut adalah beberapa langkah yang dapat Anda lakukan:\n\n1. Pemilihan lokasi yang tepat: Pastikan stroberi ditanam di lokasi yang mendapatkan sinar matahari cukup. Stroberi membutuhkan setidaknya 6-8 jam sinar matahari langsung setiap hari untuk pertumbuhan yang baik.\n\n2. Tanam di tanah yang subur: Pastikan tanah tempat menanam stroberi memiliki drainase yang baik dan kaya akan nutrisi. Anda dapat menambahkan kompos atau pupuk organik untuk meningkatkan kesuburan tanah.\n\n3. Penyiraman yang tepat: Stroberi membutuhkan kelembaban yang konsisten, tetapi tidak tergenang air. Siram tanaman secara teratur, terutama pada musim panas yang kering. Hindari menyiram daun stroberi pada malam hari untuk mencegah pengembangan penyakit jamur.\n\n4. Penjarangan daun: Jika terdapat daun yang rusak, kering, atau terinfeksi penyakit, segera singkirkan daun tersebut dengan memotongnya menggunakan pisau atau gunting tajam. Ini akan membantu mencegah penyebaran penyakit dan mempertahankan kesehatan daun yang lain.\n\n5. Penggunaan pupuk: Berikan pupuk yang sesuai untuk tanaman stroberi. Gunakan pupuk yang mengandung nutrisi penting seperti nitrogen, fosfor, dan kalium. Pastikan mengikuti petunjuk penggunaan pupuk dengan benar agar tidak memberikan dosis yang berlebihan.\n\n6. Pertahankan kebersihan lingkungan: Membersihkan gulma di sekitar tanaman stroberi dapat membantu mengurangi persaingan nutrisi dan ruang tumbuh yang dibutuhkan tanaman. Selain itu, pastikan area sekitar tanaman stroberi bersih dari sisa-sisa tanaman yang terinfeksi atau daun yang jatuh.\n\n7. Perhatikan hama dan penyakit: Inspeksi rutin terhadap tanaman stroberi untuk mendeteksi adanya hama atau penyakit. Jika ditemukan serangan, lakukan tindakan penanggulangan yang tepat seperti penggunaan insektisida organik atau fungisida yang aman bagi tanaman.\n\n8. Perlindungan dari cuaca ekstrem: Pada musim dingin atau saat suhu sangat rendah, berikan perlindungan seperti penutup atau pengaman dari bahan tahan cuaca agar daun stroberi tidak terpapar langsung oleh suhu ekstrem yang dapat merusaknya.</pre></string>
</resources>